--- a/2021_maj_web/troli.html
+++ b/2021_maj_web/troli.html
@@ -2,15 +2,13 @@
 <html lang="hu">
 
 <head>
-  <title>Trolibuszok</title>
-  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="troli.css">
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script src="troli.js"></script>
+  <title>Trolibuszok</title>
   <style>
     /* Make the image fully responsive */
     .carousel-inner img {
@@ -18,6 +16,8 @@
       height: 100%;
     }
   </style>
+  <script src="troli.js"></script>
+  <link rel="stylesheet" href="troli.css">
 </head>
 
 <body>
@@ -44,7 +44,7 @@
             <a class="nav-link" href="#felsovezetes">Felsővezetés</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#v">Budapesti viszonylatok</a>
+            <a class="nav-link" href="#viszonylatok">Budapesti viszonylatok</a>
           </li>
         </ul>
       </div>
@@ -83,7 +83,6 @@
     </a>
   </div>
 
-
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
@@ -91,7 +90,9 @@
         <p id="def">A trolibusz olyan közúti tömegközlekedési elektromos hajtású, gumikerekes jármű, amelyet áramszedők
           kapcsolnak a felsővezetékhez, amiből a mozgáshoz szükséges energiát kapja. Funkciója általában a közforgalmú
           autóbuszéhoz hasonló. A trolibusz közúti jármű; a <a href="http://net.jogtar.hu/kresz"
-            target="_blank">KRESZ</a> definíciója szerint „elektromos felsővezetékhez kötött gépkocsi”.</p>
+            target="_blank">KRESZ</a> definíciója
+          szerint „elektromos felsővezetékhez kötött
+          gépkocsi”.</p>
       </div>
     </div>
     <div class="row">
@@ -117,11 +118,11 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-8" id="felepites">
+      <div class="col-lg-8" id="felepites" class="magyarazat">
         <h2 class="display-4">Felépítés</h2>
-        <img class="img-thumbnail" src="jarmu.png" alt="Trolibus felépítése">
         <p>1980-ban gyártásba került csehszlovák Škoda 14Tr trolibusz rajza, vastag betűvel kiemelve a
           trolibusz-specifikus elemek.</p>
+        <img src="jarmu.png" alt="Trolibusz felépítése" title="Trolibusz felépítése" class="img-thumbnail">
       </div>
       <div class="col-lg-4">
         <ol>
@@ -143,9 +144,6 @@
           <li>Pályaszám</li>
         </ol>
       </div>
-
-
-
     </div>
     <div class="row">
       <div class="col-lg-6" id="felsovezetes">
@@ -173,10 +171,10 @@
           betétjáratból áll, amit a Budapesti Közlekedési Központ megrendelésére a Budapesti Közlekedési Zrt. üzemeltet.
           A hálózat hossaz 75,5km, a vonalak száma 16, összesen 172 megállóval.</p>
         <p>Az alábbi űrlapon megnézheti a kétszámjegyű járatszámok viszonylatait:</p>
-        <form method="post">
+        <form method="post" class="jaratviszonylatok">
           <p>Járatszám:
             <br>
-            <select onclick="vegallomasKiiras(this.value)">
+            <select id="jaratSzam" onchange="vegallomasKiiras(this.value)">
               <script>
                 vegallomasNevek.forEach(jaratKiiras);
               </script>
